--- a/app/src/main/res/values-ko/strings.xml
+++ b/app/src/main/res/values-ko/strings.xml
@@ -33,6 +33,7 @@
 
     <!-- Settings -->
     <string name="settings_server_settings">계정 설정</string>
+    <string name="settings_server">서버</string>
     <string name="settings_url">서버 주소</string>
     <string name="settings_url_check_description">지정한 주소에 핑을 보낼 수 있는지 표시합니다.</string>
     <string name="settings_url_warn_http">경고: "http"는 안전하지 않습니다. "https"를 사용하십시오.</string>
@@ -42,6 +43,7 @@
     <string name="settings_password_check_description">인증 정보가 올바른지 표시합니다.</string>
     <string name="settings_submit">연결</string>
     <string name="settings_submitting">연결 중&#8230;</string>
+    <string name="settings_view_category">보기 설정</string>
     <string name="settings_note_mode">메모 표시 모드</string>
     <string name="settings_cert_category">인증서</string>
     <string name="settings_cert_trust_system">시스템 인증서 신뢰</string>
