--- a/app/src/main/res/values-b+en+001/strings.xml
+++ b/app/src/main/res/values-b+en+001/strings.xml
@@ -39,7 +39,8 @@
     <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
-    <string name="settings_server_settings">Account</string>
+    <string name="settings_server_settings">Account Settings</string>
+    <string name="settings_server">Server</string>
     <string name="settings_url">Server address</string>
     <string name="settings_url_check_description">Shows whether the address can be pinged.</string>
     <string name="settings_url_warn_http">WARNING: \"http\" is unsafe. Please use \"https\".</string>
@@ -49,9 +50,10 @@
     <string name="settings_password_check_description">Displays whether the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
+    <string name="settings_view_category">View settings</string>
     <string name="settings_note_mode">Display mode for Notes</string>
     <string name="settings_theme_title">Theme</string>
-    <string name="settings_cert_category">Manage certificates</string>
+    <string name="settings_cert_category">Certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
     <string name="settings_cert_trust_system_off">System and user-added CAs won\'t be trusted</string>
