--- a/app/src/main/res/values-bg-rBG/strings.xml
+++ b/app/src/main/res/values-bg-rBG/strings.xml
@@ -32,6 +32,7 @@
     <string name="listview_updated_yesterday">Вчера</string>
     <string name="listview_updated_this_week">Тази седмица</string>
     <string name="listview_updated_this_month">Този месец</string>
+    <string name="settings_server">Сървър</string>
     <string name="settings_url">Адрес на сървъра</string>
     <string name="settings_username">Потребител</string>
     <string name="settings_password">Парола</string>
