--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -33,6 +33,7 @@
 
     <!-- Settings -->
     <string name="settings_server_settings">Nastavení účtu</string>
+    <string name="settings_server">Server</string>
     <string name="settings_url">Adresa serveru</string>
     <string name="settings_url_check_description">Značí, zda lze adresu pingnout.</string>
     <string name="settings_url_warn_http">POZOR: \"http\" není bezpečné. Prosím použijte \"https\"</string>
@@ -42,6 +43,7 @@
     <string name="settings_password_check_description">Zobrazí, zda jsou pověření správná.</string>
     <string name="settings_submit">Připojit</string>
     <string name="settings_submitting">Připojování &#8230;</string>
+    <string name="settings_view_category">Nastavení zobrazení</string>
     <string name="settings_note_mode">Režim zobrazení pro poznámky</string>
     <string name="settings_cert_category">Certifikáty</string>
     <string name="settings_cert_trust_system">Důvěřovat systémovým certifikátům</string>
