--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -29,6 +29,7 @@
     <string name="listview_updated_earlier">Dřívější</string>
 
     <!-- Settings -->
+    <string name="settings_server">Server</string>
     <string name="settings_url">Adresa serveru</string>
     <string name="settings_url_check_description">Ukáže, zdali lze na server provést ping.</string>
     <string name="settings_url_warn_http">POZOR: "http" není bezpečné. Použijte "https".</string>
