--- a/app/src/main/res/values-da/strings.xml
+++ b/app/src/main/res/values-da/strings.xml
@@ -35,6 +35,7 @@
 
     <!-- Settings -->
     <string name="settings_server_settings">Kontoindstillinger</string>
+    <string name="settings_server">Server</string>
     <string name="settings_url">Server adresse</string>
     <string name="settings_url_check_description">Viser hvorvidt  adressen kan blive pinget.</string>
     <string name="settings_url_warn_http">Advarsel: \"http\" er ikke sikker, benyt venligst \"https\".</string>
@@ -44,6 +45,7 @@
     <string name="settings_password_check_description">Viser hvorvidt brugeroplysningerne er korrekte.</string>
     <string name="settings_submit">Tilslut</string>
     <string name="settings_submitting">Tilslutter &#8230;</string>
+    <string name="settings_view_category">Vis indstillinger</string>
     <string name="settings_note_mode">Display tilstand for noter</string>
     <string name="settings_cert_category">Certifikater</string>
     <string name="settings_cert_trust_system">Stol på systemcertifikater</string>
