--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -35,6 +35,7 @@
 
     <!-- Settings -->
     <string name="settings_server_settings">Ρυθμίσεις λογαριασμού</string>
+    <string name="settings_server">Διακομιστής</string>
     <string name="settings_url">Διεύθυνση διακομιστή</string>
     <string name="settings_url_warn_http">ΠΡΟΕΙΔΟΠΟΙΗΣΗ: Το \"http\" δεν είναι ασφαλές. Παρακαλούμε χρησιμοποιήστε το \"https\".</string>
     <string name="settings_username">Όνομα χρήστη</string>
@@ -42,6 +43,7 @@
     <string name="settings_password_unchanged">Συνθηματικό (δεν άλλαξε)</string>
     <string name="settings_submit">Σύνδεση</string>
     <string name="settings_submitting">Συνδέεται &#8230;</string>
+    <string name="settings_view_category">Προβολή ρυθμίσεων</string>
     <string name="settings_note_mode">Λειτουργία προβολής σημειώσεων</string>
     <string name="settings_cert_category">Πιστοποιητικά</string>
     <string name="settings_cert_trust_system">Εμπιστοσύνη πιστοποιητικών συστήματος.</string>
