--- a/app/src/main/res/values-es-rMX/strings.xml
+++ b/app/src/main/res/values-es-rMX/strings.xml
@@ -40,6 +40,7 @@
 
     <!-- Settings -->
     <string name="settings_server_settings">Configuraciones de la cuenta</string>
+    <string name="settings_server">Servidor</string>
     <string name="settings_url">Dirección del servidor</string>
     <string name="settings_url_check_description">Muestra si a la dirección se le puede hacer un ping. </string>
     <string name="settings_url_warn_http">ADVERTENCIA: \"http\" no es seguro. Por favor usa \"https\".</string>
@@ -49,6 +50,7 @@
     <string name="settings_password_check_description">Muestra si las credenciales son correctas.</string>
     <string name="settings_submit">Conectar</string>
     <string name="settings_submitting">Conectando &#8230;</string>
+    <string name="settings_view_category">Ver configuración</string>
     <string name="settings_note_mode">Modo de visualización para Notas</string>
     <string name="settings_theme_title">Tema</string>
     <string name="settings_cert_category">Certificados</string>
