--- a/app/src/main/res/values-sk-rSK/strings.xml
+++ b/app/src/main/res/values-sk-rSK/strings.xml
@@ -40,6 +40,7 @@
 
     <!-- Settings -->
     <string name="settings_server_settings">Nastavenia účtu</string>
+    <string name="settings_server">Server</string>
     <string name="settings_url">Adresa servera</string>
     <string name="settings_url_check_description">Zobrazuje či môže byť adresa pingnutá.</string>
     <string name="settings_url_warn_http">VAROVANIE: \"http\" nie je bezpečné. Použite prosím \"https\".</string>
@@ -49,6 +50,7 @@
     <string name="settings_password_check_description">Zobrazuje či sú platné overenia.</string>
     <string name="settings_submit">Pripojiť</string>
     <string name="settings_submitting">Pripájam &#8230;</string>
+    <string name="settings_view_category">Zobraziť nastavenia</string>
     <string name="settings_note_mode">Režim zobrazovania pre Poznámky</string>
     <string name="settings_cert_category">Certifikáty</string>
     <string name="settings_cert_trust_system">Dôverovať systémovým certifikátom</string>
