--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -34,6 +34,7 @@
 
     <!-- Settings -->
     <string name="settings_server_settings">账户设置</string>
+    <string name="settings_server">服务器</string>
     <string name="settings_url">服务器地址</string>
     <string name="settings_url_warn_http">警告:“http”是不安全的，请使用“https”。</string>
     <string name="settings_username">用户名</string>
@@ -41,6 +42,7 @@
     <string name="settings_password_unchanged">密码(没修改)</string>
     <string name="settings_submit">连接</string>
     <string name="settings_submitting">连接 &#8230;</string>
+    <string name="settings_view_category">预览设置</string>
     <string name="settings_note_mode">笔记的显示模式</string>
     <string name="settings_cert_category">证书</string>
     <string name="settings_cert_trust_system">信任系统证书</string>
