--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,12 @@
     <string name="menu_preview">Preview</string>
     <string name="menu_share">Share</string>
     <string name="menu_about">About</string>
+    <string name="menu_reminder">Reminder</string>
+    <string name="dialog_reminder_title">Add a reminder</string>
+    <string name="dialog_reminder_time">Time</string>
+    <string name="dialog_reminder_date">Date</string>
+    <string name="dialog_reminder_accept">Set</string>
+    <string name="dialog_reminder_cancel">Cancel</string>
 
     <string name="change_category_title">Choose a category</string>
 
@@ -39,7 +45,8 @@
     <string name="listview_updated_earlier">Earlier</string>
 
     <!-- Settings -->
-    <string name="settings_server_settings">Account</string>
+    <string name="settings_server_settings">Account Settings</string>
+    <string name="settings_server">Server</string>
     <string name="settings_url">Server address</string>
     <string name="settings_url_check_description">Shows whether the address can be pinged.</string>
     <string name="settings_url_warn_http">WARNING: "http" is unsafe. Please use "https".</string>
@@ -49,9 +56,10 @@
     <string name="settings_password_check_description">Displays whether the credentials are correct.</string>
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
+    <string name="settings_view_category">View settings</string>
     <string name="settings_note_mode">Display mode for Notes</string>
     <string name="settings_theme_title">Theme</string>
-    <string name="settings_cert_category">Manage certificates</string>
+    <string name="settings_cert_category">Certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
     <string name="settings_cert_trust_system_off">System and user-added CAs won\'t be trusted</string>
@@ -130,7 +138,6 @@
     <string name="shortcut_create_long">Create a new note</string>
 
     <!-- Key / Values for preferences -->
-    <string name="pref_key_certs" translatable="false">certificates</string>
     <string name="pref_key_trust_system_certs" translatable="false">trustSystemCerts</string>
     <string name="pref_key_reset_trust" translatable="false">resetTrust</string>
     <string name="pref_key_note_mode" translatable="false">noteMode</string>
@@ -155,4 +162,8 @@
         <item quantity="one">%d selected</item>
         <item quantity="other">%d selected</item>
     </plurals>
+
+    <!--Notification channel-->
+    <string name="channel_name">nextcloud_notes</string>
+    <string name="channel_description">nextcloud notes reminders</string>
 </resources>
