--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,7 @@
     <string name="settings_submitting">Connecting &#8230;</string>
     <string name="settings_note_mode">Display mode for Notes</string>
     <string name="settings_theme_title">Theme</string>
+    <string name="settings_font_title">Mono-Font</string>
     <string name="settings_cert_category">Manage certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
@@ -135,6 +136,7 @@
     <string name="pref_key_reset_trust" translatable="false">resetTrust</string>
     <string name="pref_key_note_mode" translatable="false">noteMode</string>
     <string name="pref_key_theme" translatable="false">darkTheme</string>
+    <string name="pref_key_font" translatable="false">font</string>
     <string name="pref_key_last_note_mode" translatable="false">lastNoteMode</string>
     <string name="pref_value_mode_edit" translatable="false">edit</string>
     <string name="pref_value_mode_preview" translatable="false">preview</string>
@@ -142,6 +144,7 @@
     <string name="pref_value_mode_note" translatable="false">note</string>
     <string name="pref_value_theme_light">Light</string>
     <string name="pref_value_theme_dark">Dark</string>
+    <string name="pref_value_font_normal">Normal</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
