--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="label_favorites">Favorites</string>
     <string name="action_create">New note</string>
     <string name="action_settings">Settings</string>
+    <string name="action_trashbin">Deleted notes</string>
     <string name="action_search">Search</string>
     <string name="action_create_save">Save</string>
     <string name="simple_cancel">Cancel</string>
