--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,7 @@
     <string name="settings_note_mode">Display mode for notes</string>
     <string name="settings_theme_title">Theme</string>
     <string name="settings_font_title">Monospace font</string>
-    <string name="settings_theme_wifi_only">Sync</string>
+    <string name="settings_theme_wifi_only">Sync only on Wi-Fi</string>
     <string name="settings_cert_category">Manage certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
@@ -151,7 +151,6 @@
     <string name="pref_value_theme_light">Light</string>
     <string name="pref_value_theme_dark">Dark</string>
     <string name="pref_value_font_normal">Normal</string>
-    <string name="pref_value_wifi_only">Sync only on Wi-Fi</string>
     <string name="pref_value_wifi_and_mobile">Sync on Wi-Fi and mobile data</string>
 
     <!-- Array: note modes -->
