--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,9 +54,9 @@
     <string name="settings_submit">Connect</string>
     <string name="settings_submitting">Connecting &#8230;</string>
     <string name="settings_note_mode">Display mode for notes</string>
-    <string name="settings_theme_title">Theme</string>
+    <string name="settings_theme_title">Dark theme</string>
     <string name="settings_font_title">Monospace font</string>
-    <string name="settings_theme_wifi_only">Sync only on Wi-Fi</string>
+    <string name="settings_wifi_only">Sync only on Wi-Fi</string>
     <string name="settings_cert_category">Manage certificates</string>
     <string name="settings_cert_trust_system">Trust system certificates</string>
     <string name="settings_cert_trust_system_on">System and user-added CAs will be trusted (recommended)</string>
