--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,6 +152,11 @@
     <string name="pref_value_theme_dark">Dark</string>
     <string name="pref_value_font_normal">Normal</string>
     <string name="pref_value_wifi_and_mobile">Sync on Wi-Fi and mobile data</string>
+    <string name="simple_error">Error</string>
+    <string name="simple_close">Close</string>
+    <string name="simple_copy">Copy</string>
+    <string name="simple_exception">Exception</string>
+    <string name="copied_to_clipboard">Copied to clipboard</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
