Fix #567 Enable pinning notes as shortcut

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,6 +157,8 @@
     <string name="simple_copy">Copy</string>
     <string name="simple_exception">Exception</string>
     <string name="copied_to_clipboard">Copied to clipboard</string>
+    <string name="pin_to_homescreen">Pin to homescreen</string>
+    <string name="note_has_been_deleted">This note has been deleted</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
