--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -146,6 +146,7 @@
     <string name="sso_announcment_message">The Notes app will beginning with the next major version use the great Single-Sign-On-Feature of Nextcloud.  This will increase the security, reliability and comfort for you.  Please make sure, you have installed at least version 3.8.0 of the files app and select at the first run the same account which you are already using.</string>
     <string name="sso_announcment_more_info">More information</string>
     <string name="sso_announcment_understood">Understood</string>
+    <string name="account_already_imported">Account has already been imported</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
