--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -132,6 +132,8 @@
     <string name="category_movie">Movie</string>
     <string name="category_work">Work</string>
     <string name="account_already_imported">Account has already been imported</string>
+    <string name="no_notes_yet">No notes yet</string>
+    <string name="no_notes_yet_description">Press + button to create a new note</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
