Better translation for german empty content view

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -107,7 +107,7 @@
     <string name="category_movie">Film</string>
     <string name="category_work">Arbeit</string>
     <string name="account_already_imported">Konto wurde bereits importiert</string>
-    <string name="no_notes_yet">Noch keine Notizen vorhanden</string>
+    <string name="no_notes_yet">Noch keine Notizen</string>
     <string name="no_notes_yet_description">Drücke den \"+\"-Knopf um eine neue Notiz zu erstellen</string>
 
     <!-- Array: note modes -->
