--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,7 @@
     <string name="error_json">is the Notes app activated on the server?</string>
     <string name="error_no_network">no network connection</string>
     <string name="error_files_app">do you have installed the files app?</string>
+    <string name="error_unknown">an unknown error happened.</string>
 
     <!-- Snackbar Actions -->
 
