#439 Allow Rendering of any markdown file
Some refactorings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -143,6 +143,7 @@
     <string name="checkbox_could_not_be_toggled">Checkbox could not be toggled.</string>
     <string name="bulk_notes_deleted">Deleted %1$d notes</string>
     <string name="bulk_notes_restored">Restored %1$d notes</string>
+    <string name="category_readonly">Read only</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
