--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -144,6 +144,8 @@
     <string name="bulk_notes_deleted">Deleted %1$d notes</string>
     <string name="bulk_notes_restored">Restored %1$d notes</string>
     <string name="category_readonly">Read only</string>
+    <string name="no_category">No category</string>
+    <string name="add_category">Add %1$s</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
