--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -154,6 +154,7 @@
     <string name="category_readonly">Read only</string>
     <string name="no_category">No category</string>
     <string name="add_category">Add %1$s</string>
+    <string name="insufficient_storage">Your server is out of memory. Please delete some files to sync successfully.</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
