--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -154,6 +154,7 @@
     <string-array name="darkmode_entries">
         <item>Argia</item>
         <item>Iluna</item>
+        <item>Sistema lehenetsia</item>
     </string-array>
 
     <!-- Plurals -->
