--- a/app/src/main/res/values-b+en+001/strings.xml
+++ b/app/src/main/res/values-b+en+001/strings.xml
@@ -112,11 +112,13 @@
     <!-- Array: font size -->
     <string-array name="fontSize_entries">
         <item>Small</item>
+        <item>Medium</item>
         <item>Large</item>
     </string-array>
 
     <!-- Array: background synchronization -->
     <string-array name="sync_entries">
+        <item>Off</item>
         <item>15 minutes</item>
         <item>1 hour</item>
         <item>6 hours</item>
@@ -125,6 +127,7 @@
     <string-array name="darkmode_entries">
         <item>Light</item>
         <item>Dark</item>
+        <item>System Default</item>
     </string-array>
 
     <!-- Plurals -->
