--- a/app/src/main/res/values-hu-rHU/strings.xml
+++ b/app/src/main/res/values-hu-rHU/strings.xml
@@ -152,6 +152,7 @@
     <string-array name="darkmode_entries">
         <item>Világos</item>
         <item>Sötét</item>
+        <item>Rendszer alapértelmezés</item>
     </string-array>
 
     <!-- Plurals -->
