--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -154,6 +154,7 @@
     <string-array name="darkmode_entries">
         <item>浅色</item>
         <item>深色</item>
+        <item>系统默认</item>
     </string-array>
 
     <!-- Plurals -->
