--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,9 @@
     <string name="error_json">Is the Notes app activated on the server?</string>
     <string name="error_no_network">No network connection</string>
     <string name="error_files_app">Do you have installed the files app?</string>
-    <string name="error_unknown">An unknown error has occurred.</string>
+    <string name="error_token_mismatch">Cannot connect to the files app.</string>
     <string name="error_insufficient_storage">Your server storage is full.</string>
+    <string name="error_unknown">An unknown error has occurred.</string>
 
     <!-- Snackbar Actions -->
 
@@ -163,6 +164,7 @@
     <string name="simple_checkbox">Checkbox</string>
     <string name="unlock_notes">Unlock notes</string>
     <string name="simple_beta">Beta</string>
+    <string name="could_not_copy_to_clipboard">Could not copy to clipboard</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
