--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,12 +46,11 @@
     <string name="settings_lock">Password protection</string>
     <string name="settings_background_sync">Background synchronization</string>
 
-    <!-- Certificates -->
-
     <!-- Network -->
 
     <!-- Error -->
     <string name="error_sync">Synchronization failed: %1$s</string>
+    <string name="error_synchronization">Synchronization failed</string>
     <string name="error_json">Is the Notes app activated on the server?</string>
     <string name="error_no_network">No network connection</string>
     <string name="error_files_app">Do you have installed the files app?</string>
@@ -176,6 +175,8 @@
     <string name="error_dialog_check_server_logs">There is an issue with your Nextcloud setup. Please have a look into the server log files.</string>
     <string name="error_dialog_check_maintenance">Please check whether your Nextcloud instance is in maintenance mode.</string>
     <string name="error_dialog_insufficient_storage">Your Nextcloud instance has no free storage left. Please delete some files to sync your local changes into your cloud.</string>
+    <string name="error_dialog_contact_us">Please do not hestiate to contact us if the issues persist. You can find our contact information in the about section in the sidebar.</string>
+    <string name="error_dialog_we_need_info">We need the following technical information to help you:</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
