--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -175,7 +175,7 @@
     <string name="error_dialog_check_server_logs">There is an issue with your Nextcloud setup. Please have a look into the server log files.</string>
     <string name="error_dialog_check_maintenance">Please check whether your Nextcloud instance is in maintenance mode.</string>
     <string name="error_dialog_insufficient_storage">Your Nextcloud instance has no free storage left. Please delete some files to sync your local changes into your cloud.</string>
-    <string name="error_dialog_contact_us">Please do not hestiate to contact us if the issues persist. You can find our contact information in the about section in the sidebar.</string>
+    <string name="error_dialog_contact_us">Please do not hesitate to contact us if the issues persist. You can find our contact information in the about section in the sidebar.</string>
     <string name="error_dialog_we_need_info">We need the following technical information to help you:</string>
 
     <!-- Array: note modes -->
