--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -165,7 +165,7 @@
     <string name="simple_beta">Beta</string>
     <string name="could_not_copy_to_clipboard">Could not copy to clipboard</string>
     <string name="error_dialog_title">Oh no - What now? 🙁</string>
-    <string name="error_dialog_tip_token_mismatch_retry">Please try to force close the app and restart it again. There might have been an odd connection to the Nextcloud app.</string>
+    <string name="error_dialog_tip_token_mismatch_retry">Please try to force close the app and restart it again. There might have been an incorrect connection to the Nextcloud app.</string>
     <string name="error_dialog_tip_token_mismatch_clear_storage">If the issue persists, try to clear the storage of both apps: Nextcloud and Nextcloud Notes to solve this issue.</string>
     <string name="error_dialog_tip_clear_storage">You can clear the storage by opening android settings → Apps → Nextcloud / Nextcloud Notes → Storage → Clear storage.</string>
     <string name="error_dialog_tip_files_outdated">Your Nextcloud app seems to be outdated. Please visit the Play Store or F-Droid to get the latest version.</string>
