--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,6 +116,7 @@
     <string name="pref_key_font_size" translatable="false">fontSize</string>
     <string name="pref_key_wifi_only" translatable="false">wifiOnly</string>
     <string name="pref_key_lock" translatable="false">lock</string>
+    <string name="pref_category_security" translatable="false">security</string>
     <string name="pref_key_last_note_mode" translatable="false">lastNoteMode</string>
     <string name="pref_key_background_sync" translatable="false">backgroundSync</string>
     <string name="pref_value_mode_edit" translatable="false">edit</string>
@@ -181,6 +182,10 @@
     <string name="error_dialog_contact_us">Please do not hesitate to contact us if the issues persist. You can find our contact information in the about section in the sidebar.</string>
     <string name="error_dialog_we_need_info">We need the following technical information to help you:</string>
     <string name="settings_branding">Branding</string>
+    <string name="simple_security">Security</string>
+    <string name="simple_appearance">Appearance</string>
+    <string name="simple_synchronization">Synchronization</string>
+    <string name="simple_behavior">Behavior</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
