#786 Support API v1.0 Display dialog to edit title

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,8 @@
     <string name="added_content">Added "%1$s"</string>
     <string name="shared_text_empty">Shared text was empty</string>
     <string name="append_to_note">Append to note</string>
+    <string name="change_note_title">Change note title</string>
+    <string name="menu_edit_title">Edit title</string>
 
     <!-- Array: note modes -->
     <string-array name="noteMode_entries">
