--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="menu_share">Share</string>
 
     <string name="search_in_category">Search in %1$s</string>
-    <string name="search_in_all">Search All Notes</string>
+    <string name="search_in_all">Search all notes</string>
 
     <string name="change_category_title">Choose a category</string>
 
